# cppcnn

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake_modules/: find-openmp.cmake
src/: main.cpp
src/cppcnn/: CMakeLists.txt  cnn_defines.h  cppcnn.cpp  cppcnn.h  layer_base.h  layer_conv.cpp  layer_conv.h  layer_pool.cpp  layer_pool.h  run_mnist.cpp
src/cppcnn/cppmlnn/: CMakeLists.txt  cppmlnn.cpp  cppmlnn.h  run_mnist.cpp
src/utils/: util.cpp  util.h
